--- a/src/app/input-user-data-form/input-user-data-form.component.html
+++ b/src/app/input-user-data-form/input-user-data-form.component.html
@@ -1,3 +1,4 @@
+<h1>Register User</h1>
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
   <!--<div class="form-group has-error">-->
   <div class="form-group" [ngClass]="{'has-error': invalidFirstName()}">
